Finally fix nav jumping issues
by using head/main wrappers with max-width set as well as max-width for
root div.

--- a/src/main.css
+++ b/src/main.css
@@ -43,6 +43,18 @@
 }
 */
 
+#root {
+  max-width: 1024px;
+}
+.wrapper-head {
+  max-width: 1024px;
+  margin: 0 2em 0 2em;
+}
+.wrapper-main {
+  max-width: 1024px;
+  margin: 0 2em 0 2em;
+}
+
 /* My styles from original project (my.css) */
 /* and only those actually used */
 a {
